# service-net-dl

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data/services/: data.txt  sms.txt  video.txt  voice.txt
models/: README.md  model_20250908_202242.pt
src/: dataloader_factory.py  forecaster.py  input_transforms.py  main.py  model_trainer.py  names_dataset.py  network_services_dataset.py  output_transforms.py  plotter.py  settings.py  text_augmenter.py  torch_utils.py  train.py
src/input/: dataloader_factory.py  input_transforms.py  network_services_dataset.py  split_iterable_dataset.py  text_augmentations.py
src/network/: char_lstm.py  char_rnn.py  early_stopping.py  lstm_trainer.py  rnn_trainer.py  text_classifier.py
src/utils/: torch_utils.py
